# myproject

./: README.md  Untitled Diagram.drawio
etc/: cmd.xml  cmd1.xml  cmd2.xml
lib/libco/: example_echocli  example_echosvr  example_poll  example_thread
sourceinsight/: presstool.IAB  presstool.IAD  presstool.IMB  presstool.IMD  presstool.PFI  presstool.PO  presstool.PR  presstool.PRI  presstool.PS  presstool.SearchResults  presstool.WK3
src/: CMakeLists.txt  bat2run.sh  batrun.sh  build.sh  client_app.cpp  client_app.h  client_engine.cpp  client_engine.h  cmake_install.cmake  command.cpp  command.h  disaptcher.h  engine.h  remake.sh  run.sh  send_cmd.cpp  serverconfig.cpp  serverconfig.h  user.cpp  user.h  user_session.h
